# Wirtualny-ekosystem

./: README.md
nienazwany-20250301T113111Z-001/nienazwany/: CMakeLists.txt  CMakeLists.txt.user.d244063  generatorlosowy.cpp  generatorlosowy.h  main.cpp  mieszkaniec.cpp  mieszkaniec.h  nisza.cpp  nisza.h  organizm.cpp  organizm.h  osobniki.cpp  osobniki.h  sasiedztwo.cpp  sasiedztwo.h  srodowisko.cpp  srodowisko.h  start.txt  symulacja.txt  ustawienia.h
